--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,16 +21,16 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 ##La idea de utilizar una base local en el desarrollo es evitar problemas por el numero de request que permite la base en Heroku
 ##Base de datos principal LOCAL
-spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/dbcomplex?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:2031/Complexivo2?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
 spring.datasource.primary.username=postgres
-spring.datasource.primary.password=root
+spring.datasource.primary.password=2031
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
 
 
 #Base de datos FENIX
-spring.datasource.secondary.jdbcUrl=jdbc:postgresql://localhost:5432/fenix?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+spring.datasource.secondary.jdbcUrl=jdbc:postgresql://localhost:2031/Fenix?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
 spring.datasource.secondary.username=postgres
-spring.datasource.secondary.password=root
+spring.datasource.secondary.password=2031
 spring.datasource.secondary.driver-class-name=org.postgresql.Driver
 
 #logfile
