--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 ##La idea de utilizar una base local en el desarrollo es evitar problemas por el numero de request que permite la base en Heroku
 ##Base de datos principal LOCAL
-spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/dbcomplex5?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/complexivo10?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
 spring.datasource.primary.username=postgres
 spring.datasource.primary.password=root
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
